test/corpus/types.txt
===================
Primitive types
===================

type Age = number
type Name = string
type Truth = boolean

---

(source_file
  (type_definition
    (type_identifier)
    (primitive_type))
  (type_definition
    (type_identifier)
    (primitive_type))
  (type_definition
    (type_identifier)
    (primitive_type)))

===================
Tuple types
===================

type Point = [number, number]
type NamedPoint = [string, number, number]

---

(source_file
  (type_definition
    (type_identifier)
    (tuple_type
      (primitive_type)
      (primitive_type)))
  (type_definition
    (type_identifier)
    (tuple_type
      (primitive_type)
      (primitive_type)
      (primitive_type))))

===================
Tuple types with type references
===================

type Coord = [number, number]
type Point = Coord
type Location = [Point, string,]
type Complex = [Point, number, String,]

---

(source_file
  (type_definition
    (type_identifier)
    (tuple_type
      (primitive_type)
      (primitive_type)))
  (type_definition
    (type_identifier)
    (type_identifier))
  (type_definition
    (type_identifier)
    (tuple_type
      (type_identifier)
      (primitive_type)))
  (type_definition
    (type_identifier)
    (tuple_type
      (type_identifier)
      (primitive_type)
      (type_identifier))))

===================
Record types
===================

type Person = { name: string, age: number }
type Employee = {
  id: number,
  person: Person,
  department: string,
}
type Contact = { address: { street: string, city: string }, phone: string }

---

(source_file
  (type_definition
    (type_identifier)
    (record_type
      (record_field
        (identifier)
        (primitive_type))
      (record_field
        (identifier)
        (primitive_type))))
  (type_definition
    (type_identifier)
    (record_type
      (record_field
        (identifier)
        (primitive_type))
      (record_field
        (identifier)
        (type_identifier))
      (record_field
        (identifier)
        (primitive_type))))
  (type_definition
    (type_identifier)
    (record_type
      (record_field
        (identifier)
        (record_type
          (record_field
            (identifier)
            (primitive_type))
          (record_field
            (identifier)
            (primitive_type))))
      (record_field
        (identifier)
        (primitive_type)))))

===================
Record type variations
===================

type SingleField = { x: number }
type WithTuple = { coords: [number, number] }
type Multiline = {
  first: string,
  second: number,
  tuple: [
    string,
    number,
  ],
  nested: {
    x: number,
    y: number
  }
}

---

(source_file
  (type_definition
    (type_identifier)
    (record_type
      (record_field
        (identifier)
        (primitive_type))))
  (type_definition
    (type_identifier)
    (record_type
      (record_field
        (identifier)
        (tuple_type
          (primitive_type)
          (primitive_type)))))
  (type_definition
    (type_identifier)
    (record_type
      (record_field
        (identifier)
        (primitive_type))
      (record_field
        (identifier)
        (primitive_type))
      (record_field
        (identifier)
        (tuple_type
          (primitive_type)
          (primitive_type)))
      (record_field
        (identifier)
        (record_type
          (record_field
            (identifier)
            (primitive_type))
          (record_field
            (identifier)
            (primitive_type)))))))

===================
ADT types - basic variants
===================

type Shape = Circle | Square | Triangle

---

(source_file
  (type_definition
    (type_identifier)
    (adt_type
      (adt_option
        (type_identifier))
      (adt_option
        (type_identifier))
      (adt_option
        (type_identifier)))))

===================
ADT types - with fields
===================

type Option = 
  | None
  | Some(number)

type Result =
  | Ok(string)
  | Error({ message: string, code: number })

type Complex = 
  | A
  | B(number)
  | C({ x: number, y: Point })

---

(source_file
  (type_definition
    (type_identifier)
    (adt_type
      (adt_option
        (type_identifier))
      (adt_option
        (type_identifier)
        (primitive_type))))
  (type_definition
    (type_identifier)
    (adt_type
      (adt_option
        (type_identifier)
        (primitive_type))
      (adt_option
        (type_identifier)
        (adt_fields
          (adt_field
            (identifier)
            (primitive_type))
          (adt_field
            (identifier)
            (primitive_type))))))
  (type_definition
    (type_identifier)
    (adt_type
      (adt_option
        (type_identifier))
      (adt_option
        (type_identifier)
        (primitive_type))
      (adt_option
        (type_identifier)
        (adt_fields
          (adt_field
            (identifier)
            (primitive_type))
          (adt_field
            (identifier)
            (type_identifier)))))))

===================
ADT types - formatting variations
===================

type SingleVariant = | OnlyOne
type NoLeadingPipe = JustThis

type Spaced = One 
  | Two 
  | Three

type MultiField = 
  | Record({
      name: string,
      age: number,
      parent: Person,
      location: Point,
    })

---

(source_file
  (type_definition
    (type_identifier)
    (adt_type
      (adt_option
        (type_identifier))))
  (type_definition
    (type_identifier)
    (type_identifier))
  (type_definition
    (type_identifier)
    (adt_type
      (adt_option
        (type_identifier))
      (adt_option
        (type_identifier))
      (adt_option
        (type_identifier))))
  (type_definition
    (type_identifier)
    (adt_type
      (adt_option
        (type_identifier)
        (adt_fields
          (adt_field
            (identifier)
            (primitive_type))
          (adt_field
            (identifier)
            (primitive_type))
          (adt_field
            (identifier)
            (type_identifier))
          (adt_field
            (identifier)
            (type_identifier)))))))

===================
Void type
===================

type Empty = void
type MaybeValue = | Some(number) | None(void)
type Procedure = () => void

---

(source_file
  (type_definition
    (type_identifier)
    (primitive_type))
  (type_definition
    (type_identifier)
    (adt_type
      (adt_option
        (type_identifier)
        (primitive_type))
      (adt_option
        (type_identifier)
        (primitive_type))))
  (type_definition
    (type_identifier)
    (function_type
      (primitive_type))))

===================
Generic types
===================

type List = Array<number>
type Dictionary = Map<string, number>
type Nested = Container<List<number>>
type Complex = Pair<{name: string, age: number}, Array<boolean>>

---

(source_file
  (type_definition
    (type_identifier)
    (generic_type
      (type_identifier)
      (primitive_type)))
  (type_definition
    (type_identifier)
    (generic_type
      (type_identifier)
      (primitive_type)
      (primitive_type)))
  (type_definition
    (type_identifier)
    (generic_type
      (type_identifier)
      (generic_type
        (type_identifier)
        (primitive_type))))
  (type_definition
    (type_identifier)
    (generic_type
      (type_identifier)
      (record_type
        (record_field
          (identifier)
          (primitive_type))
        (record_field
          (identifier)
          (primitive_type)))
      (generic_type
        (type_identifier)
        (primitive_type)))))

===================
Generic type definitions
===================

type List<T> = Array<T>
type Pair<A, B> = { first: A, second: B }
type Result<T, E> = | Ok(T) | Error(E)
type Mapper<A, B> = (A) => B

---

(source_file
  (type_definition
    (type_identifier)
    (type_parameters
      (type_identifier))
    (generic_type
      (type_identifier)
      (type_identifier)))
  (type_definition
    (type_identifier)
    (type_parameters
      (type_identifier)
      (type_identifier))
    (record_type
      (record_field
        (identifier)
        (type_identifier))
      (record_field
        (identifier)
        (type_identifier))))
  (type_definition
    (type_identifier)
    (type_parameters
      (type_identifier)
      (type_identifier))
    (adt_type
      (adt_option
        (type_identifier)
        (type_identifier))
      (adt_option
        (type_identifier)
        (type_identifier))))
  (type_definition
    (type_identifier)
    (type_parameters
      (type_identifier)
      (type_identifier))
    (function_type
      (parameter_list_type
        (type_identifier))
      (type_identifier))))

===================
Named type parameters in function types
===================

type Callback = (name: string, age: number) => boolean
type ComplexFunction = (config: { timeout: number, retries: number }) => string
type MixedParams = (x: number, string, options: { debug: boolean }) => void
type NestedFunction = (callback: (value: number) => string) => boolean

---

(source_file
  (type_definition
    (type_identifier)
    (function_type
      (parameter_list_type
        (named_type_param
          (identifier)
          (primitive_type))
        (named_type_param
          (identifier)
          (primitive_type)))
      (primitive_type)))
  (type_definition
    (type_identifier)
    (function_type
      (parameter_list_type
        (named_type_param
          (identifier)
          (record_type
            (record_field
              (identifier)
              (primitive_type))
            (record_field
              (identifier)
              (primitive_type)))))
      (primitive_type)))
  (type_definition
    (type_identifier)
    (function_type
      (parameter_list_type
        (named_type_param
          (identifier)
          (primitive_type))
        (primitive_type)
        (named_type_param
          (identifier)
          (record_type
            (record_field
              (identifier)
              (primitive_type)))))
      (primitive_type)))
  (type_definition
    (type_identifier)
    (function_type
      (parameter_list_type
        (named_type_param
          (identifier)
          (function_type
            (parameter_list_type
              (named_type_param
                (identifier)
                (primitive_type)))
            (primitive_type))))
      (primitive_type))))

===================
Optional record fields
===================

type MaybeNumber = { value?: number }
type Person = { name: string, age?: number }
type Config = {
  debug?: boolean,
  retries: number,
  timeout?: number,
}
type NestedOptional = { meta?: { created?: string, updated: string }, active: boolean }

---

(source_file
  (type_definition
    (type_identifier)
    (record_type
      (record_field
        (identifier)
        (optional)
        (primitive_type))))
  (type_definition
    (type_identifier)
    (record_type
      (record_field
        (identifier)
        (primitive_type))
      (record_field
        (identifier)
        (optional)
        (primitive_type))))
  (type_definition
    (type_identifier)
    (record_type
      (record_field
        (identifier)
        (optional)
        (primitive_type))
      (record_field
        (identifier)
        (primitive_type))
      (record_field
        (identifier)
        (optional)
        (primitive_type))))
  (type_definition
    (type_identifier)
    (record_type
      (record_field
        (identifier)
        (optional)
        (record_type
          (record_field
            (identifier)
            (optional)
            (primitive_type))
          (record_field
            (identifier)
            (primitive_type))))
      (record_field
        (identifier)
        (primitive_type)))))